--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@600&family=Work+Sans:wght@400;600&display=swap');
+
 /*
 ! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com
-*//*
+*/
+
+/*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
@@ -32,7 +36,7 @@ html {
   -moz-tab-size: 4; /* 3 */
   -o-tab-size: 4;
      tab-size: 4; /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+  font-family: Work Sans, sans-serif; /* 4 */
 }
 
 /*
@@ -336,6 +340,7 @@ button,
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
+
 :disabled {
   cursor: default;
 }
@@ -368,7 +373,7 @@ video {
   height: auto;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -415,7 +420,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::-webkit-backdrop {
+::-webkit-backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -462,7 +467,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -508,11 +513,21 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.h-16 {
+.h-16{
   height: 4rem;
 }
+.bg-yellow-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+.font-sans{
+  font-family: Work Sans, sans-serif;
+}
+.font-semibold{
+  font-weight: 600;
+}
 
-.structureHeader {
+.structureHeader{
   margin-left: 1rem;
   margin-right: 1rem;
   display: grid;
@@ -521,9 +536,9 @@ video {
   align-items: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px){
 
-  .structureHeader {
+  .structureHeader{
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     height: 6rem;
@@ -533,9 +548,9 @@ video {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1024px){
 
-  .structureHeader {
+  .structureHeader{
     margin-left: 2.5rem;
     margin-right: 2.5rem;
     height: 6rem;
