--- a/public/styles.css
+++ b/public/styles.css
@@ -557,7 +557,7 @@ video {
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
 }
-.button-default-white-sm{
+.button-ghost-dark-sm{
   height: 2.5rem;
   border-radius: 0.75rem;
   padding-left: 1rem;
@@ -565,10 +565,11 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--white), var(--tw-bg-opacity));
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-300), var(--tw-border-opacity));
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-950), var(--tw-text-opacity));
+  color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
 .button-link-dark-sm{
   height: 2.5rem;
@@ -603,14 +604,8 @@ html{
 .w-full{
   width: 100%;
 }
-.w-20{
-  width: 5rem;
-}
 .w-24{
   width: 6rem;
-}
-.grow{
-  flex-grow: 1;
 }
 .flex-wrap{
   flex-wrap: wrap;
@@ -628,9 +623,6 @@ html{
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
-.gap-y-4{
-  row-gap: 1rem;
-}
 .gap-y-2{
   row-gap: 0.5rem;
 }
@@ -644,36 +636,32 @@ html{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-900), var(--tw-border-opacity));
 }
+.border-dark-800{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-800), var(--tw-border-opacity));
+}
 .bg-dark-950{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
-}
-.bg-dark-100{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
 }
 .bg-dark-200{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
 }
-.bg-dark-700{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-700), var(--tw-bg-opacity));
-}
-.bg-dark-800{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-800), var(--tw-bg-opacity));
-}
 .bg-dark-900{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
 }
+.bg-primary-700{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-700), var(--tw-bg-opacity));
+}
+.bg-primary-800{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
+}
 .fill-dark-700{
   fill: rgba(var(--dark-700));
-}
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 .py-20{
   padding-top: 5rem;
@@ -682,6 +670,10 @@ html{
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 .pb-6{
   padding-bottom: 1.5rem;
@@ -712,33 +704,33 @@ html{
 .leading-10{
   line-height: 2.5rem;
 }
-.text-dark-100{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-100), var(--tw-text-opacity));
-}
-.text-primary-400{
-  --tw-text-opacity: 1;
-  color: rgba(var(--primary-400), var(--tw-text-opacity));
-}
 .text-dark-500{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-500), var(--tw-text-opacity));
 }
-.text-dark-300{
+.text-basic-white{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-300), var(--tw-text-opacity));
-}
-.text-dark-400{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-400), var(--tw-text-opacity));
+  color: rgba(var(--white), var(--tw-text-opacity));
 }
 .text-dark-200{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
 }
-.underline{
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+.text-dark-400{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-400), var(--tw-text-opacity));
+}
+.text-dark-100{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
+}
+.text-dark-300{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-300), var(--tw-text-opacity));
+}
+.text-primary-100{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 
 :root {
@@ -768,6 +760,21 @@ html{
 	--black: 0, 0, 0;
 }
 
+.hover\:border-dark-800:hover{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-800), var(--tw-border-opacity));
+}
+
+.hover\:bg-dark-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
+}
+
+.hover\:text-dark-100:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
+}
+
 @media (min-width: 768px){
 
 	.md\:button-default-primary-base{
@@ -779,23 +786,14 @@ html{
     line-height: 1.5rem;
     font-weight: 500;
     --tw-bg-opacity: 1;
-    background-color: rgba(var(--primary-500), var(--tw-bg-opacity));
+    background-color: rgba(var(--primary-700), var(--tw-bg-opacity));
     --tw-text-opacity: 1;
     color: rgba(var(--white), var(--tw-text-opacity));
   }
 
-	.md\:button-default-white-base{
-    height: 3rem;
-    border-radius: 0.75rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: 500;
+	.md\:button-default-primary-base:hover{
     --tw-bg-opacity: 1;
-    background-color: rgba(var(--white), var(--tw-bg-opacity));
-    --tw-text-opacity: 1;
-    color: rgba(var(--dark-950), var(--tw-text-opacity));
+    background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
   }
 
 	.md\:block{
@@ -827,10 +825,6 @@ html{
 
   .lg\:w-32{
     width: 8rem;
-  }
-
-  .lg\:gap-8{
-    gap: 2rem;
   }
 
   .lg\:gap-10{
