--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,600&display=swap');
 
 /*
 ! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com
@@ -562,6 +562,12 @@ video {
   text-transform: uppercase;
   line-height: 1.25rem;
 }
+.p-xxl{
+  font-family: Poppins, sans-serif;
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 160%;
+}
 .p-xl{
   font-family: Poppins, sans-serif;
   font-size: 1.2rem;
@@ -626,11 +632,19 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
 }
+.bg-fixed{
+  background-image: url('/images/bg-fixed.svg');
+  background-size: cover;
+  background-position: center;
+}
 .fixed{
   position: fixed;
 }
 .absolute{
   position: absolute;
+}
+.relative{
+  position: relative;
 }
 .top-0{
   top: 0px;
@@ -656,6 +670,12 @@ html{
 }
 .mb-3{
   margin-bottom: 0.75rem;
+}
+.mt-8{
+  margin-top: 2rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -683,6 +703,9 @@ html{
 }
 .h-16{
   height: 4rem;
+}
+.h-14{
+  height: 3.5rem;
 }
 .w-full{
   width: 100%;
@@ -790,6 +813,28 @@ html{
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.from-dark-950{
+  --tw-gradient-from: rgba(var(--dark-950));
+  --tw-gradient-to: rgba(var(--dark-950), 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-dark-800{
+  --tw-gradient-from: rgba(var(--dark-800));
+  --tw-gradient-to: rgba(var(--dark-800), 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.to-dark-900{
+  --tw-gradient-to: rgba(var(--dark-900));
+}
+.to-dark-950{
+  --tw-gradient-to: rgba(var(--dark-950));
+}
+.bg-fixed{
+  background-attachment: fixed;
+}
 .fill-dark-700{
   fill: rgba(var(--dark-700));
 }
@@ -820,14 +865,18 @@ html{
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+.py-32{
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
 .pb-4{
   padding-bottom: 1rem;
 }
 .pb-8{
   padding-bottom: 2rem;
 }
-.pt-12{
-  padding-top: 3rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
 .pb-24{
   padding-bottom: 6rem;
@@ -838,16 +887,25 @@ html{
 .pb-10{
   padding-bottom: 2.5rem;
 }
+.pt-32{
+  padding-top: 8rem;
+}
 .text-center{
   text-align: center;
 }
-.text-dark-500{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-500), var(--tw-text-opacity));
+.font-semibold{
+  font-weight: 600;
+}
+.italic{
+  font-style: italic;
 }
 .text-basic-white{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
+}
+.text-dark-500{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-500), var(--tw-text-opacity));
 }
 .text-dark-400{
   --tw-text-opacity: 1;
@@ -860,6 +918,18 @@ html{
 .text-primary-100{
   --tw-text-opacity: 1;
   color: rgba(var(--primary-100), var(--tw-text-opacity));
+}
+.text-dark-100{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
+}
+.text-dark-300{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-300), var(--tw-text-opacity));
+}
+.text-dark-700{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
 .opacity-40{
   opacity: 0.4;
@@ -940,6 +1010,11 @@ html{
   color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 
+.hover\:text-dark-950:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-950), var(--tw-text-opacity));
+}
+
 .hover\:opacity-80:hover{
   opacity: 0.8;
 }
@@ -959,6 +1034,13 @@ html{
     font-weight: 700;
     text-transform: uppercase;
     line-height: 2.5rem;
+  }
+
+	.md\:p-xxl{
+    font-family: Poppins, sans-serif;
+    font-size: 1.75rem;
+    font-weight: 400;
+    line-height: 160%;
   }
 	.md\:p-base{
     font-family: Poppins, sans-serif;
