--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,600&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -36,6 +36,10 @@
 	}
 	.title-h3-movil {
 		@apply font-headings font-bold text-[1rem] leading-[1.25rem] uppercase;
+	}
+
+	.p-xxl {
+		@apply font-sans font-normal text-[1.75rem] leading-[160%];
 	}
 
 	.p-xl {
@@ -145,6 +149,10 @@
 
 	.colums-photos {
 		@apply columns;
+	}
+
+	.bg-fixed {
+		@apply bg-[url('/images/bg-fixed.svg')] bg-cover bg-center;
 	}
 }
 
