--- a/public/styles.css
+++ b/public/styles.css
@@ -562,12 +562,6 @@ video {
   text-transform: uppercase;
   line-height: 1.25rem;
 }
-.p-xxl{
-  font-family: Poppins, sans-serif;
-  font-size: 1.75rem;
-  font-weight: 400;
-  line-height: 160%;
-}
 .p-xl{
   font-family: Poppins, sans-serif;
   font-size: 1.2rem;
@@ -671,9 +665,6 @@ html{
 .mb-3{
   margin-bottom: 0.75rem;
 }
-.mt-8{
-  margin-top: 2rem;
-}
 .mt-10{
   margin-top: 2.5rem;
 }
@@ -689,6 +680,9 @@ html{
 .hidden{
   display: none;
 }
+.h-16{
+  height: 4rem;
+}
 .h-8{
   height: 2rem;
 }
@@ -700,12 +694,6 @@ html{
 }
 .h-6{
   height: 1.5rem;
-}
-.h-16{
-  height: 4rem;
-}
-.h-14{
-  height: 3.5rem;
 }
 .w-full{
   width: 100%;
@@ -786,6 +774,10 @@ html{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-700), var(--tw-border-opacity));
 }
+.bg-dark-200{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
+}
 .bg-dark-950{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
@@ -801,10 +793,6 @@ html{
 .bg-dark-900{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
-}
-.bg-dark-200{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
 }
 .bg-primary-800{
   --tw-bg-opacity: 1;
@@ -865,10 +853,6 @@ html{
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.py-32{
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
 .pb-4{
   padding-bottom: 1rem;
 }
@@ -911,25 +895,21 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-400), var(--tw-text-opacity));
 }
+.text-dark-700{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-700), var(--tw-text-opacity));
+}
 .text-dark-200{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
-}
-.text-primary-100{
-  --tw-text-opacity: 1;
-  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 .text-dark-100{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
-.text-dark-300{
+.text-primary-100{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-300), var(--tw-text-opacity));
-}
-.text-dark-700{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-700), var(--tw-text-opacity));
+  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 .opacity-40{
   opacity: 0.4;
@@ -1005,14 +985,14 @@ html{
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
 }
 
-.hover\:text-dark-100:hover{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-100), var(--tw-text-opacity));
-}
-
 .hover\:text-dark-950:hover{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-950), var(--tw-text-opacity));
+}
+
+.hover\:text-dark-100:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 
 .hover\:opacity-80:hover{
@@ -1021,12 +1001,19 @@ html{
 
 @media (min-width: 768px){
 
-	.md\:title-h1-desktop{
+	.md\:title-big-desktop{
     font-family: Lexend, sans-serif;
     font-size: 3rem;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 3.5rem;
+  }
+	.md\:title-h1-desktop{
+    font-family: Lexend, sans-serif;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 3rem;
   }
 	.md\:title-h2-desktop{
     font-family: Lexend, sans-serif;
